@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ncdc-0.5.tar.gz 215380 RMD160 1cb16288044ff36979827a9d9c56f6f36eab1551 SHA1 de88f2420f526add10838526ddb7c07b8555a510 SHA256 0d74dffc615e46312696868010ccce9415a55d774daa7b6b0e3c9831230ec359
-EBUILD ncdc-0.5.ebuild 547 RMD160 eab27fa20cd250306b5a8d75c58a16d20b7f953a SHA1 cf7cf05b40ff61ecf544ec7e613da30b8ba69980 SHA256 a1b85a97d0c43e99415ebf437114eeaa2b08fafd69cd754781d6e354816ef2ca
-EBUILD ncdc-9999.ebuild 607 RMD160 b097f96a78bc9506470ead5774d45f90d94aab23 SHA1 6e78f5aa22773d81f8c26038ed34b0bac9c32716 SHA256 677f6b0b37fa7ff12beae053cb849f8d9dfc52b81d1533ff4fb973b86498ce0f
-MISC ChangeLog 757 RMD160 5b7120f893c515cd9f6d58e805a06246dd089190 SHA1 7a9941ad8758952df9fa0135acf97120a40b43ed SHA256 cc665985e6f7125a32d314d738446f2ef4b88ac0c04a99ecbc973c9bfda68694
+DIST ncdc-0.6.tar.gz 224763 RMD160 a59abc8ae6388093b9862bd7f9eca85de3b6d02c SHA1 24c79a5b1eb2db6c7840bc22bc0b26111c694544 SHA256 0a270a0dd55fbe763d8353e51688bc561fae4246115397e37004216a3f9dc6ba
+EBUILD ncdc-0.6.ebuild 501 RMD160 96c45f1c1648f18895e7e1a7f4d2a508746737dd SHA1 aeb189b68e4b5bf9f18543430e6d3b4130e5fc6b SHA256 cd5095dc07cc764aa67572a853ce676b890c98cc1c8b80a256b467f3677bd39a
+EBUILD ncdc-9999.ebuild 552 RMD160 6c5b892fed9cf82ea49fbf4a4d4c0cbcb151ec78 SHA1 90906d9c37169e30f2a38eed19cee669bb2ecb35 SHA256 4e6f0b31cfd5b678eaefefe03121ce2ce0820a597b75c1b3c3bc31a0473bddd0
+MISC ChangeLog 937 RMD160 0991faa722b1df17f2df9cac8224dce193ae935d SHA1 ebf0abeaf1dc56b07ce5098b4d8fee8ded935888 SHA256 af8dfff5061b22fce5da022c4f1d95c81b006505463b25857b4942e76f560c85
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk47KQ4ACgkQknrdDGLu8JA3kAD/d8iPAWRm5ygGyi64YVoqnoF+
-udLLe9q5tbJ4Pdks9wEA/id1dcsxNo87aMqdsilIxaLKa9GFMWG2zVbNW9EZu2Nv
-=S/2S
+iF4EAREIAAYFAk5Ans0ACgkQknrdDGLu8JCJGgEAhfIRkZ+q2+QXv78vMYPO6uzI
+eH4CqtRilwbnNLvdKwwA/AkaVJ/Mtbbx6xa+orcVVeAzvQQgBCE8PxGfKKb7D4X8
+=mnPJ
 -----END PGP SIGNATURE-----
